clusters/kube.sphygmo.io/example/alb/05_web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: ssl:arn:here
spec:
  rules:
    - host: webalb.kube.sphygmo.io
      http:
        paths:
          - path: /
            backend:
              serviceName: web-nodeport
              servicePort: 8080
